src/test/deca/context/valid/custom/if/if_float_false.deca
// Description:
//   Declaration of a float and test its value with an if condition.
// Results:
//    Line 11: display "Ok" on the standard output because the condition is false.
//
// History:
//    created on 12/01/2022

{
   float i = 1.1;
   if (i == 0.1) {
        println("Error because i == 0.1 is false");
   } else {
        println("Ok");
   }
}
